[metadata]
name = dockernet
version = 1.0.0
summary = docker virtual network setup tool
author = Tarun Thakur
author-email = tarun.t@altencalsoftlabs.com
classifier =
    Environment :: Ubuntu
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Setup

[global]
setup-hooks =
    pbr.hooks.setup_hook

[options]
include_package_data = True
packages = find:

[install]
install-lib=/usr/lib/python2.7/dist-packages
install-scripts=/usr/bin

[files]
packages =
    dockernet

[entry_points]
console_scripts =
    dockernet = dockernet.cmd.dockernet:start

[pbr]
warnerrors = true
autodoc_index_modules = true

